--- a/app/src/main/res/layout/fragment_page_viewer.xml
+++ b/app/src/main/res/layout/fragment_page_viewer.xml
@@ -7,12 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".PageViewerFragment" >
 
-    <TextView
-        android:id="@+id/textViewTest"
-        android:layout_width="182dp"
-        android:layout_height="142dp"
-        android:text="@string/empty"
-        android:textSize="40dp"
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="410dp"
+        android:layout_height="761dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
