--- a/app/src/main/res/layout-land/fragment_page_viewer.xml
+++ b/app/src/main/res/layout-land/fragment_page_viewer.xml
@@ -9,10 +9,12 @@
 
     <WebView
         android:id="@+id/webView"
-        android:layout_width="411dp"
-        android:layout_height="720dp"
+        android:layout_width="679dp"
+        android:layout_height="362dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.442"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.474" />
 </androidx.constraintlayout.widget.ConstraintLayout>
